--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 /* font-family: 'Amatic SC', cursive;
 font-family: 'Poppins', sans-serif; */
-
-#landing-page {
-    background: url(yellowbg.png);
+*{
+    scroll-behavior: smooth;
+  scroll-padding-top: 2rem;
+}
+body{
+    background: url(bg.png);
     background-size: 100%;
 }
+/* #landing-page {
+    background: url(yellowbg.png);
+    background-size: 100%;
+    height: 1020px;
+} */
 
 .hero-img {
-    height: 75%;
+    height: 72%;
 }
 
 .row h2 {
@@ -50,13 +58,13 @@ span {
 
 /* Experience */
 
-#experience {
+/* #experience {
     background: url(pg2.png);
     position: relative;
     z-index: 1;
-    background-size: 102%;
+    background-size:90%;
     height: 750px;
-}
+} */
 
 .experience h1,
 .work h1,
@@ -120,10 +128,10 @@ span {
 
 /* W O R K S=================================================== */
 /* W O R K S================================================== */
-#work{
+/* #work{
     background-image: url(pg3.png);
     background-size: 100%;
-}
+} */
 .wrapper {
     width: 100%;
     padding-top: 10px;
@@ -136,6 +144,7 @@ span {
     font-weight: bolder;
     font-size: 3rem;
     top: 10px;
+    margin-bottom: 50px;
     position: relative;
     margin-left: 100px;
 
@@ -174,23 +183,23 @@ color: rgb(43, 41, 41);
 
 .graphic-designs img {
 
-    width: 25%;
+    width: 29%;
 }
 
 .graphic-designs {
     justify-content: center;
     padding: 30px;
     display: flex;
-    gap: 3rem;
+    gap: 1rem;
     margin-bottom: 100px;
 }
 
 /* CONTACT */
-#contact{
+/* #contact{
     background-image: url(usframe.png);
     background-size:110%;
     background-position: center;
-}
+} */
 .center{
     text-align: center;
     font-family: 'Poppins', sans-serif;
@@ -205,7 +214,7 @@ color: rgb(43, 41, 41);
 } */
 .flox{
     display: flex;
-    padding: 280px 0 30px;
+    padding: 240px 0 30px;
     gap: 0;
     justify-content: center;
 }
