--- a/styles.css
+++ b/styles.css
@@ -222,11 +222,13 @@ span {
     transform: scale(1);
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
+    box-shadow:5px 5px 6px gray;
 }
 
 .hover01:hover img {
-    -webkit-transform: scale(1.4);
-    transform: scale(1.4);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    box-shadow:2px 2px 6px gray;
 }
 
 .graphic-designs {
