--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ span {
 .contact h1 {
     text-align: center;
     padding-top: 50px;
+    font-size: 3rem;
     padding-bottom: 50px;
     color: #323232;
     font-family: 'Poppins', sans-serif;
@@ -126,7 +127,7 @@ span {
     position: relative;
     width: 2.5%;
     height: 2.5%;
-    right: 8px;
+    right: 6px;
     z-index: -1;
     bottom: 5px;
 
@@ -161,27 +162,27 @@ span {
     margin: 0px auto;
 }
 .apple:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .todo:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .music:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .cycle:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .bank:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .store:hover{
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 8px gray;
     transition: 0.5s;
 }
 .slick-slide {
@@ -213,7 +214,7 @@ span {
     width: 85%;
 }
 .shecan img:hover{
-    box-shadow:7px -7px 6px gray;
+    box-shadow:5px -5px 5px rgb(211, 199, 199);
     transition: 1s;
 }
 .hover01 img {
@@ -222,7 +223,7 @@ span {
     transform: scale(1);
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
-    box-shadow:5px 5px 6px gray;
+    box-shadow:5px 5px 6px rgb(211, 199, 199);
 }
 
 .hover01:hover img {
